--- a/public/style.css
+++ b/public/style.css
@@ -10,3 +10,87 @@
     display: block;
  }
  
+ .reload {
+   /* position:absolute;
+   top: 20px;
+   left: 20px;
+   z-index: 4; */
+   height: 2rem;
+   width: 2rem;
+   margin: 0 50px;
+   border: none;
+   background: none;
+   outline: none;
+ }
+
+ .flex-container {
+   margin-top: 200px;
+   display: flex;
+   justify-content: center;
+   /* gap: 15px; */
+ }
+
+ .pink {
+   top: 20px;
+   height: 2rem;
+   width: 2rem;
+   background: #c62f6a;
+   color: #c62f6a;
+   margin: 0 14px;
+   border-radius: 100%;
+   border: none;
+ }
+
+ .purple {
+   top: 20px;
+   height: 2rem;
+   width: 2rem;
+   background: #834baa;
+   color: #834baa;
+   margin: 0 14px;
+   border-radius: 100%;
+   border: none;
+ }
+
+ .canard {
+   height: 2rem;
+   width: 2rem;
+   background: #1b9b92;
+   color: #1b9b92;
+   margin: 0 14px;
+   border-radius: 100%;
+   border: none;
+ }
+
+ .orange {
+   height: 2rem;
+   width: 2rem;
+   background: #ff914d;
+   color: #ff914d;
+   margin: 0 14px;
+   border-radius: 100%;
+   border: none;
+ }
+
+ .yellow {
+   height: 2rem;
+   width: 2rem;
+   background: #ffde59;
+   color: #ffde59;
+   margin: 0 14px;
+   border-radius: 100%;
+   border: none;
+ }
+
+ .black {
+   height: 2rem;
+   width: 2rem;
+   background: #000000;
+   color: #000000;
+   margin: 0 14px;
+   border-radius: 100%;
+   border: none;
+ }
+
+
+
